@@ -19,6 +19,8 @@
         <file>images/send-arrow.svg</file>
         <file>images/camera.svg</file>
         <file>images/delete.svg</file>
+        <file>images/back-square.svg</file>
+        <file>images/up-arrow.svg</file>
     </qresource>
     <qresource prefix="/"/>
 </RCC>
