@@ -95,5 +95,6 @@
         <file>qml/editor/ConfiguratorAppImagesPage.qml</file>
         <file>qml/items/YACTriggerableItem.qml</file>
         <file>qml/YACPleaseWaitForm.qml</file>
+        <file>qml/apppages/AppUserBasePage2.qml</file>
     </qresource>
 </RCC>
